src/content/aboutComicsFriends/aboutComicsFriends.css
h1, h2 {
    text-align: center;
}

p {
text-align: justify;
}

.section {
    display: block;
    min-height: 80vh;
    display: flex;
    flex-direction: column;
    margin-bottom: 5em;
    align-items: center;
}

.container {
    max-width: 1900px;
    align-items: center;
    display: flex;
    flex-direction: column;
}

.line {
    display: flex;
    flex-wrap: wrap;
}

.line .bloc {
    min-width: 50%;
    flex: 1 1 300px;
}

.line .bloc > div {
    text-align: center;
}

.line1 .bloc1 img{
    width: 80%;
    height: 80%;
}

.section1 {
    padding: 0;
}

#logoCanva {
    width:50%;
    position:absolute;
    top:0;
    margin:0;
    padding:0;
    margin-top:20%;
    margin-left:25%;
}

.anim3D2::after {
        content: "";
        height: 100vh;
        position: absolute;
        bottom: -4.8em;
        left: 0;
        width: 100%;
        background: linear-gradient(180deg,
            rgba(129, 129, 129, 0) 20%,
            rgb(218, 218, 218) 100%);
}

.section1bis::before {
    content: "";
    height: 20vh;
    position: absolute;
    top: -0;
    left: 0;
    width: 100%;
    /* background: linear-gradient(180deg,
        rgba(129, 129, 129, 0) 20%,
        rgb(172, 172, 172) 100%); */
    background: linear-gradient(180deg, rgb(218, 218, 218),rgba(172, 172, 172, 0));
}

.section1bis {
    background-color: #f8fbfe;
    width: 100%;
    position: relative;
    align-items: center;
    padding: 1.5em;
}

.section1bis .aboutComicsFriends {
    max-width: 1080px;
}

.section1bis .aboutComicsFriends h1 {
    margin: 5em auto  2em auto;
    max-width:11em;
}

.section1bis .aboutComicsFriends p {
    padding: 2em 0 2em 0;
    text-align: justify;
    width: 90%;
    margin: 0em auto;
}

.section2 {
    justify-content: center;
}

.section2 {
    margin: auto;
    text-align: center;
}
.section2 .comicsFriendspic3{
    width: 70%;
    margin: 4em auto;
}

.section2 .line1 .bloc {
    min-width: 25%;
    padding: 1.5em 2.5em;
    font-size: 1em;
    margin: auto;
}

.section2 .line1 .bloc p {
    text-align: justify;
    text-justify: distribute;
}
.section2 .line1 .bloc h2 {
    text-align: center;
}

.section3 {
    background-color: #f8fbfe;
    padding: 3em 0;
}

.section3 .description {
    padding-left: 20%;
    padding-right: 20%; 
    margin: 0 auto 5em auto;
    text-align: justify;
}

.section3 .cards {
    margin-bottom: 5%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.section3 .card {
    height: fit-content;
    width: 25em;
    box-shadow: 0 0 29px 0 rgba(18, 66, 101, 0.08);
    border-radius: 10px;
    margin: 5%;
    padding: 1.5em;
    font-size: 15px;
    transition: all 0.3s ease-in-out;
    background-color: white;
}

.section3 .card:hover {
    transform: scale(1.1);
}

.section4 {
    padding: 1.5em;
    font-size: 1.01em;
}

.section5 {
    padding: 1em;
    height: fit-content;
    background-color: #f8fbfe;
}

.section5 .team {
    text-align: center;
}

.section5 .team p {
    display: block;
    width: 80%;
    margin: auto;
}

.section5 .team .teamList {
    margin-top: 2em;
}

.section5 .team .teamList ul {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    font-size: 15pxs;
}

.section5 .team .teamList li {
    margin: 0.3em 0;
}

.section5 .team .teamList .member {
    height: 14em;
    width: 16em;
    box-shadow: 0 0 29px 0 rgba(18, 66, 101, 0.08);
    border-radius: 10px;
    margin: 2%;
    padding: 1.5em;
    font-size: 15px;
    text-align: center;
    align-items: center;
    transition: all 0.4s;
}

.section5 .team .teamList .member:hover{
    transform: scale(1.3);
}

.section6 {
    font-size: 0.9em;
    padding: 1em;
    box-shadow: 0 0 29px 0 rgba(18, 66, 101, 0.08);
}

.section6 .faq_block .section-title {
    padding: 0 3em;
    text-align: center;
}

.section6 .faq-list li {
    transform: all 0.1s;
}

.section6 .faq-list li:hover {
    box-shadow: 0 0 59px 0 rgba(18, 66, 101, 0.116);
    border-radius: 5px;
    transform: scale(1.05);
}

.section6 .faq_block .faq-list ul li {
    margin: 3em;
}

.section6 .faq_block .faq-list ul li a {
    color:#124265;
    font-weight: bold;
}

.section7 {
    padding: 1.5em;
}

.section7 .contact_titleBloc {
    width: fit-content;
    margin: 1em auto;
    text-align: center;
}

.section8 {
    height: 4vh;
    width: 100%;
    background-color: #f8fbfe;
    display: flex;
    align-items: center;  
    justify-content: center;
}

.section8 .footer a {
    color: grey;
}

/*Mobile view*/
@media (max-width: 750px) {
    .space {
        display: none;
    }
    #logoCanva {
        margin-top:100%;
        transform: scale(1.7);
    }
}

